--- a/src/stylesheets/base/grid.scss
+++ b/src/stylesheets/base/grid.scss
@@ -1,7 +1,9 @@
+@use "sass:math";
+
 // Helper to convert straight number to percentage
 @function convertify($number) {
   @if type-of($number) == 'number' and unitless($number) {
-    @return percentage($number / $grid-column-count);
+    @return percentage(math.div($number, $grid-column-count));
   }
   @return $number;
 }
@@ -18,8 +20,8 @@
   flex-wrap: $wrap;
   align-items: $align;
   justify-content: $justify;
-  margin-right: -($grid-gutter/2);
-  margin-left: -($grid-gutter/2);
+  margin-right: -(math.div($grid-gutter, 2));
+  margin-left: -(math.div($grid-gutter, 2));
   @if $direction == ltr {
     flex-direction: row;
   } @else {
@@ -32,8 +34,8 @@
   flex: none;
   align-self: $align;
   width: convertify($width);
-  padding-right: $grid-gutter/2;
-  padding-left: $grid-gutter/2;
+  padding-right: math.div($grid-gutter, 2);
+  padding-left: math.div($grid-gutter, 2);
 }
 
 // Offsets
