--- a/src/stylesheets/all.scss
+++ b/src/stylesheets/all.scss
@@ -7,6 +7,7 @@
 @import 'base/mixins';
 @import 'base/document';
 @import 'base/typography';
+@import 'base/spacing';
 
 .page {
   border: 4px solid red;
