--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -13,6 +13,7 @@ $font-family-default: 'Rubik', sans-serif;
 $font-family-heading: 'Tungsten Bold', sans-serif;
 $font-size-min: 14px;
 $font-size-default: 16px;
+$font-size-large: 21px;
 
 // Grid
 $grid-column-count: 12;
