--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  @include responsive-font($font-size-min, $font-size-default);
+  @include responsive-font(18px, 16px);
   font-family: $font-family-default;
   font-weight: 400;
   line-height: 1.4;
@@ -15,6 +15,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+}
+
+.body--large {
+  @include responsive-font($font-size-min, $font-size-large);
+  letter-spacing: -0.2;
 }
 
 h1,
