Added a bunch of new components

--- a/src/components/pages/index/Hero/hero.module.scss
+++ b/src/components/pages/index/Hero/hero.module.scss
@@ -1,6 +1,6 @@
-@import '../../stylesheets/includes.scss';
+@import '../../../../stylesheets/includes.scss';
 
-.hero {
+.section {
   background-color: $color-light;
   height: 600px;
 }
