--- a/src/components/shared/GiantOutline/giant-outline.module.scss
+++ b/src/components/shared/GiantOutline/giant-outline.module.scss
@@ -1,4 +1,4 @@
-@import '../../stylesheets/includes.scss';
+@import '../../../stylesheets/includes.scss';
 
 .giant-outline {
   position: absolute;
