--- a/src/components/shared/Button/button.module.scss
+++ b/src/components/shared/Button/button.module.scss
@@ -1,4 +1,4 @@
-@import '../../stylesheets/includes.scss';
+@import '../../../stylesheets/includes.scss';
 $btn-transition: all 0.2s ease-out;
 
 @mixin btn-outline() {
