--- a/src/stylesheets/base/_document.scss
+++ b/src/stylesheets/base/_document.scss
@@ -3,25 +3,31 @@
 *::after {
   box-sizing: border-box;
 }
+
 html,
 body {
   width: 100%;
   height: 100%;
 }
+
 header,
 section,
 footer {
   position: relative;
   display: block;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+
 .container {
   @include container();
 }
+
 .section {
-  overflow: hidden;
+  width: 100%;
+  position: relative;
 }
