--- a/src/stylesheets/components/index/episode.module.scss
+++ b/src/stylesheets/components/index/episode.module.scss
@@ -1,9 +1,9 @@
-@import '../../../../stylesheets/includes.scss';
+@import 'stylesheets/includes.scss';
 
 .section {
   background-color: $color-dark;
   padding: spacing(xxxxl) 0 spacing(xxxl);
-  background-image: url('../../../../images/disruption.jpg');
+  background-image: url('images/disruption.jpg');
   background-size: cover;
   background-position: center 20%;
   z-index: 1;
