--- a/src/stylesheets/components/index/hero.module.scss
+++ b/src/stylesheets/components/index/hero.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../stylesheets/includes.scss';
+@import 'stylesheets/includes.scss';
 
 .section {
   background-color: $color-light;
