--- a/src/stylesheets/components/shared/button.module.scss
+++ b/src/stylesheets/components/shared/button.module.scss
@@ -1,4 +1,5 @@
-@import '../../../stylesheets/includes.scss';
+@import 'stylesheets/includes.scss';
+
 $btn-transition: all 0.2s ease-out;
 
 @mixin btn-outline() {
