--- a/src/stylesheets/components/index/agents.module.scss
+++ b/src/stylesheets/components/index/agents.module.scss
@@ -10,6 +10,25 @@
   z-index: 1;
 }
 
+.texture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('images/agents-texture.png');
+  background-repeat: no-repeat;
+  background-position: 42% 42%;
+}
+
+.agents {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(-20%) translateY(-15%);
+  z-index: 1;
+}
+
 .accent {
   background-color: $color-accent;
   position: absolute;
