--- a/src/stylesheets/components/shared/giant-text.module.scss
+++ b/src/stylesheets/components/shared/giant-text.module.scss
@@ -12,7 +12,7 @@
   font-family: $font-family-heading;
   line-height: 0.85;
   margin: 0;
-  transition: all 0.2s ease-out 0.1s;
+  transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
   transform: translateY(100%);
   text-transform: uppercase;
 }
