Added footer and header

--- a/src/stylesheets/base/_document.scss
+++ b/src/stylesheets/base/_document.scss
@@ -24,10 +24,10 @@ img {
 }
 
 .container {
-  @include container();
+  @include container;
 }
 
 .section {
-  width: 100%;
   position: relative;
+  width: 100%;
 }
