--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -1,5 +1,5 @@
 // Standard Colors
-$color-primary: #ff00ff;
+$color-primary: #f0f;
 $color-accent: #ff4656;
 $color-light: #ece8e1;
 $color-dark: #0f1923;
@@ -9,8 +9,8 @@ $text-default: $color-dark;
 $text-light: $color-light;
 
 // Typography
-$font-family-default: 'Rubik', sans-serif;
-$font-family-heading: 'Tungsten Bold', sans-serif;
+$font-family-default: "Rubik", sans-serif;
+$font-family-heading: "Tungsten Bold", sans-serif;
 $font-size-min: 14px;
 $font-size-default: 16px;
 $font-size-large: 21px;
