--- a/src/stylesheets/base/_mixins.scss
+++ b/src/stylesheets/base/_mixins.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "sass:meta";
 
 @mixin clearfix {
   display: table;
@@ -18,19 +19,13 @@
   -webkit-overflow-scrolling: touch;
 }
 
-@mixin appearance-none {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
 @mixin container() {
   position: relative;
-  flex-grow: 1;
   max-width: $page-width + $container-gutter-mobile;
-  margin: 0 auto;
+  flex-grow: 1;
   padding-right: $container-gutter-mobile;
   padding-left: $container-gutter-mobile;
+  margin: 0 auto;
   @media (min-width: $min-mobile) {
     max-width: $page-width + $container-gutter-mobile * 2;
   }
@@ -58,7 +53,7 @@
   $size: $font-size,
   $limit: $page-limit
 ) {
-  $scale-font-enable: global-variable-exists(scale);
+  $scale-font-enable: meta.global-variable-exists(scale);
   $unitless-min: strip-unit($min-size);
   $unitless-size: strip-unit($size);
   $baseline: strip-unit($min-mobile);
@@ -67,6 +62,7 @@
     strip-unit($limit) - $baseline
   );
   $font-baseline: ($unitless-min - $font-multiplier * $baseline);
+
   font-size: #{$unitless-min}px;
   @if $unitless-min >= $unitless-size {
     @warn "Responsive font: min-size equal or greater than size";
