--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -4,17 +4,18 @@ html {
 
 body {
   @include responsive-font(18px, 16px);
-  font-family: $font-family-default;
-  font-weight: 400;
-  line-height: 1.4;
+
   position: relative;
   margin: 0;
-  letter-spacing: normal;
   color: $text-default;
+  font-family: $font-family-default;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  letter-spacing: normal;
+  line-height: 1.4;
+  text-rendering: optimizelegibility;
   text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
 }
 
 .t-body-small {
@@ -24,8 +25,9 @@ body {
 
 .t-body-large {
   @include responsive-font($font-size-min, $font-size-large);
-  letter-spacing: -0.2;
+
   font-weight: 600;
+  letter-spacing: -0.2;
   line-height: 1.2;
 }
 
@@ -64,22 +66,27 @@ h1,
 .heading--1 {
   @include rf(36, 48);
 }
+
 h2,
 .heading--2 {
   @include rf(30, 36);
 }
+
 h3,
 .heading--3 {
   @include rf(24, 30);
 }
+
 h4,
 .heading--4 {
   @include rf(20, 24);
 }
+
 h5,
 .heading--5 {
   @include rf(18, 20);
 }
+
 h6,
 .heading--6 {
   @include rf(14, 16);
@@ -88,6 +95,7 @@ h6,
 .display--1 {
   @include rf(48, 72);
 }
+
 .display--2 {
   @include rf(42, 60);
 }
@@ -107,7 +115,7 @@ strong {
 
 pre {
   padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgb(0 0 0 / 10%);
 }
 
 code {
@@ -115,16 +123,16 @@ code {
 }
 
 blockquote {
-  margin: 0;
   padding: 0;
   padding-left: 20px;
   border-left: 2px solid $color-primary;
+  margin: 0;
 }
 
 ul,
 ol {
-  margin: 0;
   padding: 0 20px;
+  margin: 0;
 }
 
 a {
