--- a/src/stylesheets/components/index/hero.module.scss
+++ b/src/stylesheets/components/index/hero.module.scss
@@ -1,24 +1,24 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 .section {
-  background-color: $color-light;
   height: 40vw;
+  background-color: $color-light;
 }
 
 .container {
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 
 .video-container {
-  width: 100%;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .video {
@@ -26,8 +26,8 @@
 }
 
 .body {
-  color: $color-light;
   margin: 0;
+  color: $color-light;
 }
 
 .logo {
