--- a/src/stylesheets/components/index/maps.module.scss
+++ b/src/stylesheets/components/index/maps.module.scss
@@ -3,22 +3,23 @@
 $bleed: 100px;
 
 .section {
-  background-color: $color-light;
   padding: spacing(xxxl) 0;
+  background-color: $color-light;
 }
 
 .birds {
   position: absolute;
   top: 60px;
   left: 50%;
-  transform: translateX(60%);
   width: 400px;
   height: 264px;
   background-image: url('images/birds.png');
+  transform: translateX(60%);
 }
 
 .image {
   position: absolute;
+  z-index: 1;
   top: -$bleed;
   left: 0;
   width: 100%;
@@ -26,11 +27,10 @@ $bleed: 100px;
   background-image: url('images/maps.png');
   background-position: right top;
   background-repeat: no-repeat;
-  z-index: 1;
 }
 
 .row {
-  @include grid-row();
+  @include grid-row;
 }
 
 .col {
@@ -62,6 +62,6 @@ $bleed: 100px;
 }
 
 .body {
-  margin-bottom: spacing(xl);
   max-width: 420px;
+  margin-bottom: spacing(xl);
 }
