--- a/src/stylesheets/components/index/parallax.module.scss
+++ b/src/stylesheets/components/index/parallax.module.scss
@@ -1,4 +1,4 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 .section {
   height: 800px;
@@ -6,19 +6,19 @@
 }
 
 .center {
+  position: absolute;
+  top: 50%;
   width: 100%;
   height: 2px;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
   background-color: red;
+  transform: translateY(-50%);
 }
 
 .box {
+  position: absolute;
+  left: 50%;
   width: 100px;
   height: 100px;
   background-color: blue;
-  left: 50%;
   transform: translateX(-50%);
-  position: absolute;
 }
