--- a/src/stylesheets/components/shared/accent-line.module.scss
+++ b/src/stylesheets/components/shared/accent-line.module.scss
@@ -1,14 +1,14 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 .line {
   position: absolute;
-  left: 50%;
-  transform: translateX(-600px);
+  z-index: 1;
   top: 0;
+  left: 50%;
   width: 1px;
   height: 100%;
   background-color: rgba($color-light, 0.3);
-  z-index: 1;
+  transform: translateX(-600px);
 }
 
 .line-dark {
