--- a/src/stylesheets/components/shared/accent-video.module.scss
+++ b/src/stylesheets/components/shared/accent-video.module.scss
@@ -1,4 +1,4 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 .content {
   position: relative;
@@ -11,25 +11,25 @@
 
 .title {
   position: absolute;
-  padding: 5px 20px;
-  background-color: $color-accent;
   top: 20px;
   left: -20px;
+  padding: 5px 20px;
+  background-color: $color-accent;
   color: $color-light;
   font-size: 13px;
   font-weight: 600;
 }
 
 .accent {
-  background-color: $color-accent;
   position: absolute;
+  background-color: $color-accent;
 }
 
 .accent-top {
-  height: 8px;
-  width: 8px;
-  left: 0;
   top: -40px;
+  left: 0;
+  width: 8px;
+  height: 8px;
 }
 
 .accent-top-2 {
@@ -37,61 +37,61 @@
 }
 
 .accent-bottom {
-  width: 120px;
   bottom: -4px;
-  height: 4px;
   left: 0;
+  width: 120px;
+  height: 4px;
 }
 
 .play {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
+  display: flex;
   width: 100%;
   height: 100%;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
 }
 
 .play-button {
+  position: relative;
+  display: flex;
+  overflow: hidden;
   width: 80px;
   height: 80px;
-  background-color: rgba($color-accent, 0.4);
-  border: 1px solid $color-light;
-  display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  border: 1px solid $color-light;
+  background-color: rgba($color-accent, 0.4);
   transition: all 0.2s;
-  overflow: hidden;
 }
 
 .play-hover-overlay {
+  position: absolute;
+  left: -215px;
   width: 200px;
   height: 80px;
-  left: -215px;
-  transform: skewX(-15deg);
   background-color: $color-dark;
-  position: absolute;
+  transform: skewX(-15deg);
   transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .play-arrow {
+  position: relative;
   width: 0;
   height: 0;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
   border-left: 12px solid $color-light;
-  position: relative;
 }
 
 .play-line {
+  position: absolute;
   width: 1px;
   height: 15px;
+  background-color: $color-light;
   transform: rotate(45deg);
   transform-origin: center center;
-  background-color: $color-light;
-  position: absolute;
 }
 
 .play-line-1 {
@@ -100,14 +100,14 @@
 }
 
 .play-line-2 {
-  left: 15px;
   bottom: 10px;
+  left: 15px;
 }
 
 .play-box {
   position: absolute;
-  bottom: 0;
   right: 0;
+  bottom: 0;
   width: 5px;
   height: 5px;
   background-color: $color-light;
