--- a/src/stylesheets/components/shared/button.module.scss
+++ b/src/stylesheets/components/shared/button.module.scss
@@ -1,26 +1,27 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 $btn-transition: all 0.2s ease-out;
 
 @mixin btn-outline() {
-  @include fit();
+  @include fit;
+
   width: 100%;
   height: 40%;
-  transition: $btn-transition;
   border: 1px solid $color-light;
+  transition: $btn-transition;
 }
 
 .btn {
   position: relative;
   display: inline-block;
-  margin-bottom: 20px;
-  padding: 8px;
-  cursor: pointer;
   min-width: 288px;
+  padding: 8px;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .btn-outline {
-  @include btn-outline();
+  @include btn-outline;
 }
 
 .btn-outline-dark {
@@ -51,27 +52,28 @@ $btn-transition: all 0.2s ease-out;
 }
 
 .btn-overlay {
-  @include fit();
+  @include fit;
+
   width: 120%;
   height: 120%;
-  transition: $btn-transition;
-  transform: skewX(-20deg) translateX(-104%);
   background-color: $color-dark;
+  transform: skewX(-20deg) translateX(-104%);
+  transition: $btn-transition;
 }
 
 .btn-text {
+  position: relative;
+  color: $color-light;
   font-size: 13px;
   font-weight: 700;
-  position: relative;
-  transition: $btn-transition;
   text-transform: uppercase;
-  color: $color-light;
+  transition: $btn-transition;
 }
 
 .btn-accent {
   position: absolute;
-  transition: $btn-transition;
   background-color: $color-dark;
+  transition: $btn-transition;
 }
 
 .btn-accent-1 {
@@ -92,26 +94,30 @@ $btn-transition: all 0.2s ease-out;
   margin-bottom: 0;
 }
 
-.btn:hover {
-  .btn-accent-2 {
-    background-color: $color-light;
-  }
-  .btn-overlay {
-    transform: skew(-20deg) translateX(-8%);
-  }
-  .btn-text {
-    color: $text-light;
-  }
-}
-
 .btn-secondary {
   .btn-text {
     color: $color-dark;
   }
+
   .btn-content {
     background-color: $color-light;
   }
+
   .btn-outline {
     border-color: $color-dark;
+  }
+}
+
+.btn:hover {
+  .btn-accent-2 {
+    background-color: $color-light;
+  }
+
+  .btn-overlay {
+    transform: skew(-20deg) translateX(-8%);
+  }
+
+  .btn-text {
+    color: $text-light;
   }
 }
