--- a/src/stylesheets/components/shared/footer.module.scss
+++ b/src/stylesheets/components/shared/footer.module.scss
@@ -1,4 +1,11 @@
 .footer {
-  background-color: #111;
-  height: 600px;
+  padding: 100px 0;
+  text-align: center;
+  background-color: #000000;
+  &__legal {
+    font-size: 1.2rem;
+    max-width: 500px;
+    margin: 30px auto;
+    color: rgba(#ffffff, 0.4);
+  }
 }
