--- a/src/stylesheets/components/shared/giant-outline.module.scss
+++ b/src/stylesheets/components/shared/giant-outline.module.scss
@@ -1,12 +1,13 @@
-@import 'stylesheets/includes.scss';
+@import 'stylesheets/includes';
 
 .giant-outline {
+  @include responsive-font(72px, 360px);
+
+  z-index: 0;
+  color: $color-light;
   font-family: $font-family-default;
   font-weight: 600;
-  color: $color-light;
-  @include responsive-font(72px, 360px);
   line-height: 0.8;
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: 0 0 2px rgba(#000, 0.2);
   text-transform: uppercase;
-  z-index: 0;
 }
