--- a/src/stylesheets/components/shared/header.module.scss
+++ b/src/stylesheets/components/shared/header.module.scss
@@ -1,4 +1,21 @@
 .header {
-  background-color: #111;
-  height: 80px;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  padding: 0 20px;
+  color: #ffffff;
+  background-color: #000000;
+  &__link {
+    font-size: 1.0rem;
+    font-weight: 700;
+    margin: 0;
+    padding: 0 20px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
 }
